[package]
name = "encoded"
version = "0.1.0"
edition = "2018"

[dependencies]
panic-halt = "0.2.0"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "536c5d"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

exclude = [
    # The RAVEDUDE! Yeah!
    "ravedude",
]
