[package]
name = "encoded"
version = "0.1.0"
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
pwm-pca9685 = "0.3.1"
arduino-hal = { git = "https://github.com/Rahix/avr-hal", branch = "main", features = ["arduino-uno"] }
avr-device = "0.3"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

exclude = [
    # The RAVEDUDE! Yeah!
    "ravedude",
]
